# fiars

./: Cargo.toml  Dockerfile  README.md  fiars  maths
.github/workflows/: publish.yml
src/: bot.rs  game.rs  lib.rs  main.rs  tui.rs
