[package]
name = "fiars"
version = "0.1.0"
edition = "2021"

[dependencies]
color-print = "0.3.7"
getch = "0.3.1"
lazy_static = "1.5.0"
rand = "0.8.5"
strum = { version = "0.26.3", features = ["derive"] }

[profile.release]
opt-level = 3
debug = false
split-debuginfo = 'off'
strip = "symbols"
debug-assertions = false
overflow-checks = false
lto = true
panic = 'abort'
incremental = false
codegen-units = 16
rpath = false
