[package]
name = "fiars"
version = "0.1.0"
edition = "2021"

[dependencies]
getch = "0.3"
fastrand = "2.3"

[profile.release]
opt-level = 3
debug = false
split-debuginfo = 'off'
strip = "symbols"
debug-assertions = false
overflow-checks = false
lto = true
panic = 'abort'
incremental = false
codegen-units = 16
rpath = false
